Fix section title and list alignment

--- a/plugins/woocommerce-admin/client/two-column-tasks/headers/section-header.scss
+++ b/plugins/woocommerce-admin/client/two-column-tasks/headers/section-header.scss
@@ -9,4 +9,10 @@
 	.woocommerce-task-header__contents p {
 		font-size: 16px;
 	}
+
+	.woocommerce-task-header__contents h1 {
+		font-size: 20px;
+		line-height: 28px;
+		padding: 0px;
+	}
 }
